# rockbot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cmdAbc.py  config.example.json  config.json.example  config.py  default.config.toml  download_predictions.py  editDraw.sh  example.config.toml  git.sh  manual_start.sh  requirements.in  requirements.txt  rock.py  test.py  testBot.py  testDirectApi.py  testLogger.py  testOpenAi.py
.opencode/plans/: remove-display-name-filter.md
_dfd/: agent-harness.md  context-diagram.md  image-interception.md
_dfd/agent/: agent-harness.md  agent-loop.md  boot-sequence.md
_dfd/ai/: ai-provider.md
_dfd/base/: knowledge-priority.md  knowledge.md  memory-compression.md  rocketchat-rest.md  rocketchat.md
_dfd/infra/: config.md  matrix.md  rocketchat-rest.md  rocketchat.md
_dfd/interception/: image-interception.md  secret-interception.md
_dfd/knowledge/: knowledge-priority.md  knowledge.md
_dfd/memory/: memory-compression.md  memory-reset.md  memory.md
_dfd/tools/: calendar.md  compress-memory.md  datetime.md  edit-soul.md  exa-search.md  image-gen.md  knowledge.md  reset-memory.md  search-web.md  secret-interception.md  vision.md  web-fetch.md  webdav.md
_dfds/: agent-harness.md  agent-loop.md  agent-orchestrator.md  agent.md  ai-provider.md  config.md  context-diagram.md  image-interception.md  knowledge.md  memory.md  rocketchat.md  webdav.md
_dfds/base/: ai-provider.md  config.md  knowledge-priority.md  knowledge.md  memory-compression.md  memory.md  rocketchat-rest.md  rocketchat.md  room-cache.md  webdav-calendar.md  webdav-directory.md  webdav-memory.md  webdav.md
_dfds/tools/: calendar.md  datetime.md  edit-soul.md  exa-search.md  image-gen.md  knowledge.md  vision.md  web-fetch.md  webdav.md
_doc/: conditional-tool-registration.md  config-files.md  example.secrets.toml  knowledge-priority-review.md  rockbot.service
_doc/constraints/: README.md  image-generation-user-stories.md  top-10-user-stories.md
_doc/image-gen/: image-data-flow.md  image-gen-round-trip.md  openrouter-image-gen.md
_doc/matrix/: dm-no-encryption.md
_doc/prompts/: prompt-inventory.md
_doc/rocketchat/: room-name-fields.md  room-separation-save.md
_doc/scenarios/: README.md  image-generation-user-stories.md  non-functional-requirements.md
_doc/test_suite/: README.md  core.md  real.md  running.md  user.md
_docs/: agent-harness.md  fal.md  image-data-flow.md  rocketchat-client.md
_docs/constraints/: README.md  image-generation-user-stories.md  non-functional-requirements.md  top-10-user-stories.md
_docs/feat/: top-10-user-stories.md
_docs/image-gen/: fal.md  (+4 more)
atomCmd/: assetCmd.py  fuelCmd.py  mantCmd.py  vdiCmd.py  washCmd.py
bot/: RocketChatBot.py  bot.py  chat.py  chatAbc.py  openai.py  test_bot.py  test_chat.py  test_openai.py
comnCmd/: chatCmd.py  countdCmd.py  duckCmd.py  gifCmd.py
crate-rockbot/: Cargo.toml
crate-rockbot/src/: config.rs  error.rs  harness.rs  image_cache.rs  knowledge.rs  lib.rs  main.rs  memory.rs  tool.rs  types.rs  utils.rs  validated.rs
crate-rockbot/src/platform/: matrix.rs  mod.rs  rocketchat.rs
crate-rockbot/src/provider/: deepseek.rs  fal.rs  llamacpp.rs  mod.rs  openrouter.rs  replicate.rs
crate-rockbot/src/tools/: calendar.rs  compress_memory.rs  datetime.rs  edit_soul.rs  forget_knowledge.rs  image_gen.rs  mod.rs  recall_knowledge.rs  reset_memory.rs  save_knowledge.rs  vision.rs  web_fetch.rs  web_search.rs  webdav.rs
crate-rockbot/tests/: fal_real.rs  image_gen_real.rs  integration_mock.rs  integration_mock_tools.rs  knowledge_real.rs  matrix_mock.rs  matrix_real.rs  provider_tests.rs  provider_token_probe.rs  seedream5_real.rs
crate-rocketchat/: Cargo.toml
crate-rocketchat/src/: client.rs  config.rs  ddp.rs  error.rs  lib.rs  main.rs  rest.rs  types.rs  validated.rs
crate-rocketchat/tests/: integration.rs  integration_dual.rs  integration_real.rs  integration_rest.rs
crate-webdav/: Cargo.toml
crate-webdav/src/: calendar.rs  client.rs  config.rs  error.rs  lib.rs  path.rs  types.rs  validated.rs
crate-webdav/tests/: config_tests.rs  integration.rs  integration_real.rs
crates/rocketchat/: Cargo.toml
crates/rocketchat/src/: ddp.rs  main.rs  types.rs
crates/rocketchat/tests/: integration.rs  integration_real.rs
db/: assetDb.py  baseDb.py  expenseDb.py  fuelDb.py  gifDb.py
openwebui/replicate/: copy_images.py  download_predictions.py  pyproject.toml  requirements.txt
util/: config.py  decorators.py  fileOperation.py  fluxDraw.py  logger.py  theArgParse.py
(+37 files in other folders)
