[package]
name = "rockbot"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "AI-powered RocketChat bot — config, provider, agent loop, tools, memory, WebDAV"
repository = "https://github.com/anomalyco/rockbot"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webdav = { path = "../crate-webdav" }
rocketchat = { path = "../crate-rocketchat" }
base64 = "0.22"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
