[package]
name = "rockbot"
version = "1.1.3"
edition = "2024"
license = "MIT"
rust-version = "1.93"
description = "AI-powered RocketChat bot — config, provider, agent loop, tools, memory, WebDAV"
repository = "https://github.com/anomalyco/rockbot"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webdav = { path = "../crate-webdav" }
rocketchat = { path = "../crate-rocketchat" }
base64 = "0.22"
regex = "1"
uuid = { version = "1", features = ["v5"] }
url = "2"
serde_valid = "0.18"
validator = { version = "0.20", features = ["derive"] }
matrix-sdk = { version = "0.18", default-features = false, features = ["markdown", "bundled-sqlite"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
