[package]
name = "rocketchat"
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Standalone RocketChat DDP WebSocket client library"
repository = "https://github.com/anomalyco/rockbot"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
rustls-native-certs = "0.8"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
toml = "1.1"
thiserror = "2"
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
url = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
