[package]
name = "webdav"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "WebDAV client library for NextCloud storage operations"
repository = "https://github.com/anomalyco/rockbot"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.40", features = ["serialize"] }
thiserror = "2"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing"] }
url = "2"
percent-encoding = "2"
tracing = "0.1"
bytes = "1"
toml = "1.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6"
